--- a/src/template/index.html
+++ b/src/template/index.html
@@ -20,13 +20,17 @@
     <link rel="stylesheet" type="text/css" href="https://www.infinixmobility.com/fileadmin/assets/styles/main.built.css" />
     <link rel="stylesheet" type="text/css" href="https://www.infinixmobility.com/fileadmin/assets/styles/overview.built.css" />
 
-    <title>Documents</title>
+    <title><title></title></title>
   </head>
   <body>
     <div class="product-main-content">
       <div class="sec1">
         <div class="title">ANIMATION</div>
       </div>
+      <div class="sec1">
+        <div class="title">ANIMATIONAC</div>
+      </div>
+     
     </div>
     <script src="https://www.infinixmobility.com/fileadmin/assets/scripts/head.built.js?1618205682"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
