--- a/src/template/pc.scss
+++ b/src/template/pc.scss
@@ -9,8 +9,10 @@
   .title {
     @include center-position;
 
-    width: fit-content;
-    height: fit-content;
+    width: 500px;
+    height: 500px;
+    color: red;
     font-size: 80px;
+    font-family: DINProRegular;
   }
 }
