feat: change template

--- a/src/template/mob.scss
+++ b/src/template/mob.scss
@@ -1,8 +1,6 @@
+@import "/utils/scss/font";
+@import "/utils/scss/function";
+/* stylelint-disable-next-line block-no-empty */
 @media (max-width: 768px) {
-  .aa {
-    width: 200px;
-    height: 1280px;
-    color: red !important;
-    font-size: 26px;
-  }
+
 }
